Major refactor. Removed unused resources
