# app/Providers/RouteServiceProvider.php
@@ -12,15 +12,6 @@ use Illuminate\Support\Facades\Route;
 class RouteServiceProvider extends ServiceProvider
 {
     /**
-     * The path to the "home" route for your application.
-     *
-     * Typically, users are redirected here after authentication.
-     *
-     * @var string
-     */
-    public const HOME = '/home';
-
-    /**
      * Define your route model bindings, pattern filters, and other route configuration.
      *
      * @return void
@@ -34,6 +25,7 @@ class RouteServiceProvider extends ServiceProvider
                 ->prefix('api')
                 ->group(function () {
                     $this->getUserRoutes();
+                    $this->getCompanyRoutes();
                 });
 
             Route::middleware('web')
@@ -56,6 +48,16 @@ class RouteServiceProvider extends ServiceProvider
             'middleware' => ['auth:user'],
         ], function () {
             require base_path('routes/api/profile.php');
+        });
+    }
+
+    private function getCompanyRoutes()
+    {
+        Route::group([
+            'middleware' => ['auth:user'],
+        ], function () {
+            require base_path('routes/api/company/employee.php');
+            require base_path('routes/api/company/user.php');
         });
     }
 
